[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/MapTile.png" type="Texture" id=1]
[ext_resource path="res://sprites/MapSelection.png" type="Texture" id=2]
[ext_resource path="res://scenes/UIs/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/MapSelectionNew.gd" type="Script" id=5]
[ext_resource path="res://sprites/MapImages/MidConstructMapTile.png" type="Texture" id=6]
[ext_resource path="res://sprites/MapTileSelected.png" type="Texture" id=7]
[ext_resource path="res://scripts/MapTile.gd" type="Script" id=8]
[ext_resource path="res://sprites/MapImages/RainyIslandMapTile.png" type="Texture" id=9]
[ext_resource path="res://sprites/MapImages/TilemapTestMapTile.png" type="Texture" id=10]
[ext_resource path="res://sprites/MapImages/BlankMapTile.png" type="Texture" id=11]
[ext_resource path="res://sprites/MapImages/FlatlandsMapTile.png" type="Texture" id=12]
[ext_resource path="res://sprites/MapSelectionShadow.png" type="Texture" id=13]
[ext_resource path="res://sounds/hover.wav" type="AudioStream" id=14]
[ext_resource path="res://scenes/Maps/TilemapTest.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Maps/Blank.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/Maps/Flatlands.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Maps/MidConstruct.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "MapSelectionBop"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 135, 40 ), Vector2( 135, 50 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 135, 40 ) ]
}

[node name="MapSelectionNew" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.8

[node name="Description" type="Label" parent="."]
margin_left = 624.0
margin_top = 117.0
margin_right = 984.0
margin_bottom = 521.0
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "basic map description"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 135.0
margin_top = 40.0
margin_right = 889.0
margin_bottom = 105.0
texture = ExtResource( 2 )
expand = true

[node name="Shadow" type="TextureRect" parent="Title"]
self_modulate = Color( 1, 1, 1, 0.258824 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -435.0
margin_top = -78.5
margin_right = 435.0
margin_bottom = 78.5
texture = ExtResource( 13 )
expand = true

[node name="Maps" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -441.0
margin_top = 117.0
margin_right = 100.0
margin_bottom = 511.0
__meta__ = {
"_edit_lock_": true
}

[node name="Flatlands" type="TextureButton" parent="Maps"]
margin_right = 131.0
margin_bottom = 129.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
map_resource = ExtResource( 17 )
map_name = "Flatlands"
map_desc = "good for testing stuff
i guess"

[node name="TextureRect" type="TextureRect" parent="Maps/Flatlands"]
self_modulate = Color( 0.960784, 0.960784, 0.960784, 1 )
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 125, 56 )
texture = ExtResource( 12 )
expand = true

[node name="BadConstruct" type="TextureButton" parent="Maps"]
margin_left = 133.0
margin_right = 264.0
margin_bottom = 129.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
map_resource = ExtResource( 18 )
map_name = "Bad Construct"
map_desc = "gm_construct
but awesome"

[node name="TextureRect" type="TextureRect" parent="Maps/BadConstruct"]
self_modulate = Color( 0.960784, 0.960784, 0.960784, 1 )
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 125, 56 )
texture = ExtResource( 6 )
expand = true

[node name="RainyIsland" type="TextureButton" parent="Maps"]
margin_left = 266.0
margin_right = 397.0
margin_bottom = 129.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
map_name = "Rainy Island"
map_desc = "texas right now"

[node name="TextureRect" type="TextureRect" parent="Maps/RainyIsland"]
self_modulate = Color( 0.960784, 0.960784, 0.960784, 1 )
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 125, 56 )
texture = ExtResource( 9 )
expand = true

[node name="BlankNothing" type="TextureButton" parent="Maps"]
margin_left = 399.0
margin_right = 530.0
margin_bottom = 129.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
map_resource = ExtResource( 16 )
map_name = "Blank, Nothing"
map_desc = "Blank.
Literally Nothing.
Go Blank."

[node name="TextureRect" type="TextureRect" parent="Maps/BlankNothing"]
self_modulate = Color( 0.960784, 0.960784, 0.960784, 1 )
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 125, 56 )
texture = ExtResource( 11 )
expand = true

[node name="TilemapTest" type="TextureButton" parent="Maps"]
margin_left = 1.0
margin_top = 135.0
margin_right = 132.0
margin_bottom = 264.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
map_resource = ExtResource( 15 )
map_name = "Tilemap Test"
map_desc = "basic tilemap
crazy"

[node name="TextureRect" type="TextureRect" parent="Maps/TilemapTest"]
self_modulate = Color( 0.960784, 0.960784, 0.960784, 1 )
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 125, 56 )
texture = ExtResource( 10 )
expand = true

[node name="NamePoint" type="Node2D" parent="."]

[node name="NameLabel" type="Label" parent="NamePoint"]
margin_left = 10.0
margin_top = 12.0
margin_right = 127.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "map name"

[node name="Exit" parent="." instance=ExtResource( 3 )]
margin_left = 930.0
margin_top = 555.0
margin_right = 1015.0
margin_bottom = 600.0

[node name="IdleAnim" type="AnimationPlayer" parent="."]
autoplay = "MapSelectionBop"
anims/MapSelectionBop = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="toggle_name" from="Maps/Flatlands" to="." method="_on_toggle_name"]
[connection signal="toggle_name" from="Maps/BadConstruct" to="." method="_on_toggle_name"]
[connection signal="toggle_name" from="Maps/RainyIsland" to="." method="_on_toggle_name"]
[connection signal="toggle_name" from="Maps/BlankNothing" to="." method="_on_toggle_name"]
[connection signal="toggle_name" from="Maps/TilemapTest" to="." method="_on_toggle_name"]
[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
